@@ -18,5 +18,6 @@
     "128": "icon128.png",
 	"19":"icon19.png"
   },
-  "incognito": "split"
+  "incognito": "split",
+  "minimum_chrome_version" : "22"
 }
